tests/lang/compile_fail/concat_mismatch.expo
fn main()
  a = "hello"
  b: Binary = <<1, 2>>
  c = a <> b
  print(c)
end
